--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,32 @@
-body {
-    background: red;
-    padding: 20px;
+
+
+* {
+    box-sizing: border-box;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+}
+footer {
+    width: 100%;
+    height: 78px;
+    background: #262626;
+    .footer_text {
+        color: #f8f8f8;
+        position: relative;
+        top: 33px;
+        font-size: 12px;
+        font-weight: 500;
+        left: 192px;
+        font-family: Montserrat;
+    }
+    ul {
+        list-style-type: none;
+        display: inline-block;
+        padding: 0;
+        position: relative;
+        left: 1115px;
+        li {
+            display: inline;
+        }
+    }
 }
