--- a/style.css
+++ b/style.css
@@ -1,28 +1,123 @@
+@import "https://fonts.googleapis.com/css?family=Montserrat&display=swap";
+@import "https://fonts.googleapis.com/css?family=Teko&display=swap";
 * {
   box-sizing: border-box;
-  overflow: hidden;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  overflow-x: hidden; }
 
-footer {
-  width: 100%;
+header {
   height: 78px;
-  background: #262626; }
-  footer .footer_text {
+  background: #262626;
+  background-size: cover; }
+  header .header_text {
     color: #f8f8f8;
-    position: relative;
+    position: absolute;
     top: 33px;
     font-size: 12px;
     font-weight: 500;
     left: 192px;
-    font-family: Montserrat; }
-  footer ul {
-    list-style-type: none;
-    display: inline-block;
-    padding: 0;
+    font-family: Montserrat;
+    display: inline; }
+  header .list {
+    height: 78px;
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
     position: relative;
-    left: 1115px; }
-    footer ul li {
-      display: inline; }
+    right: 195px; }
+    header .list a:not(:first-child) {
+      margin-right: 28px; }
+
+.main {
+  width: 100%;
+  height: 800px;
+  background-image: url(/img/harley-davidson-1Lg7p5hC2pI-unsplash.jpg);
+  background-size: cover; }
+  .main .main__header {
+    overflow: hidden;
+    position: relative;
+    top: 37px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 90px; }
+    .main .main__header .main__logo {
+      position: relative;
+      top: 5px;
+      left: 191px; }
+    .main .main__header .main__nav {
+      position: relative; }
+      .main .main__header .main__nav a {
+        text-decoration: none;
+        letter-spacing: 0.45px;
+        margin-right: 52px;
+        font-size: 23px;
+        font-family: Teko;
+        font-weight: 600;
+        color: #404040; }
+        .main .main__header .main__nav a:not(:last-child):after {
+          content: '';
+          display: inline-block;
+          transform: rotate(360grad);
+          width: 9px;
+          height: 9px;
+          background-color: #004cff;
+          position: relative;
+          left: 25px; }
+        .main .main__header .main__nav a.active {
+          color: #004cff; }
+    .main .main__header .main__shopping {
+      letter-spacing: 0.45px;
+      padding: 20px 30px;
+      font-family: Teko;
+      font-weight: 600;
+      font-size: 23px;
+      width: 201px;
+      background-color: #004cff;
+      color: #ffffff;
+      position: relative;
+      right: 191px; }
+  .main .main__center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    top: 164px; }
+    .main .main__center .main__slogan {
+      font-family: Teko;
+      font-size: 68px;
+      font-weight: 700;
+      line-height: 72px;
+      color: #ffffff;
+      width: 328px;
+      position: relative;
+      left: 192px;
+      letter-spacing: 2.73px;
+      overflow: hidden; }
+    .main .main__center .main__slider {
+      position: relative;
+      position: relative;
+      right: 113px; }
+      .main .main__center .main__slider p {
+        width: 16px;
+        height: 16px;
+        border: 4px solid #404040;
+        margin-top: 22px;
+        border-radius: 8px; }
+        .main .main__center .main__slider p.active {
+          border-color: #004cff; }
+  .main .main__discover {
+    position: relative;
+    left: 191px;
+    top: 392px; }
+    .main .main__discover button {
+      width: 248px;
+      height: 61px;
+      color: #ffffff;
+      font-size: 18px;
+      font-weight: 600;
+      background: none;
+      border: 6px solid #ffffff; }
 
 /*# sourceMappingURL=style.css.map */
