--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
-  overflow-x: hidden; }
+  margin: 0; }
 
 body {
-  background: #262626; }
+  background: #262626;
+  overflow-x: hidden; }
 
 header {
   height: 78px;
+  background-color: #262626;
   background-size: cover; }
   header .header_text {
     color: #f8f8f8;
@@ -66,7 +67,8 @@ header {
           height: 9px;
           background-color: #004cff;
           position: relative;
-          left: 25px; }
+          left: 25px;
+          pointer-events: none; }
         .main .main__header .main__nav a.active {
           color: #004cff; }
     .main .main__header .main__shopping {
@@ -122,38 +124,53 @@ header {
       background: none;
       border: 6px solid #ffffff; }
 
-.four-jpegs {
-  margin: 45px 45px 0px 45px;
-  height: 850px; }
-  .four-jpegs .four-jpegs__first-two {
-    display: flex;
-    justify-content: space-between; }
-    .four-jpegs .four-jpegs__first-two .four-jpegs__opacity-byke {
-      width: 890px;
-      height: 402px;
-      background-image: url(img/opacity_byke.jpg);
-      background-size: cover;
-      background-color: #004cff; }
-    .four-jpegs .four-jpegs__first-two .four-jpegs__mirrow-byke {
-      height: 402px;
-      width: 417px;
-      background-image: url(img/bike-mirrow.jpg);
-      background-size: cover; }
-  .four-jpegs .four-jpegs__last-two {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 45px; }
-    .four-jpegs .four-jpegs__last-two .four-jpegs__wheel-byke {
-      height: 402px;
-      width: 417px;
-      background-image: url(img/bike-wheel.jpg);
-      background-size: cover; }
-    .four-jpegs .four-jpegs__last-two .four-jpegs__full-byke {
-      width: 890px;
-      height: 402px;
-      background-image: url(img/black-bike.jpg);
-      background-size: cover; }
-  .four-jpegs .bg-for_jpeg {
-    background-color: #004cff; }
+.bikes {
+  margin: 45px 45px 0px;
+  height: 848px; }
+  .bikes .bike-info {
+    position: relative;
+    width: 890px;
+    height: 402px;
+    font-family: Teko;
+    color: #ffffff; }
+    .bikes .bike-info .info-content {
+      opacity: 0;
+      position: absolute;
+      background-color: rgba(0, 4, 255, 0.75);
+      width: 100%;
+      height: 100%; }
+      .bikes .bike-info .info-content:hover {
+        opacity: 1; }
+      .bikes .bike-info .info-content .info-title {
+        width: 371px;
+        height: 150px;
+        color: #ffffff;
+        font-size: 68px;
+        font-weight: 500;
+        line-height: 61.5px;
+        letter-spacing: 2.73px;
+        position: relative;
+        left: 146px;
+        top: 100px; }
+      .bikes .bike-info .info-content .info-substring {
+        position: absolute;
+        right: 68px;
+        bottom: 73px;
+        font-size: 78px;
+        font-weight: 700;
+        line-height: 70.5px;
+        width: 100px; }
+        .bikes .bike-info .info-content .info-substring span {
+          font-size: 43px;
+          font-weight: 500;
+          line-height: 1; }
+    .bikes .bike-info img {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center; }
 
 /*# sourceMappingURL=style.css.map */
