--- a/style.css
+++ b/style.css
@@ -127,50 +127,62 @@ header {
 .bikes {
   margin: 45px 45px 0px;
   height: 848px; }
-  .bikes .bike-info {
-    position: relative;
-    width: 890px;
-    height: 402px;
-    font-family: Teko;
-    color: #ffffff; }
-    .bikes .bike-info .info-content {
-      opacity: 0;
-      position: absolute;
-      background-color: rgba(0, 4, 255, 0.75);
-      width: 100%;
-      height: 100%; }
-      .bikes .bike-info .info-content:hover {
-        opacity: 1; }
-      .bikes .bike-info .info-content .info-title {
-        width: 371px;
-        height: 150px;
-        color: #ffffff;
-        font-size: 68px;
-        font-weight: 500;
-        line-height: 61.5px;
-        letter-spacing: 2.73px;
-        position: relative;
-        left: 146px;
-        top: 100px; }
-      .bikes .bike-info .info-content .info-substring {
+  .bikes .top-bikes {
+    display: flex;
+    justify-content: center; }
+    .bikes .top-bikes .bike-info {
+      position: relative;
+      width: 890px;
+      height: 402px;
+      font-family: Teko;
+      color: #ffffff; }
+      .bikes .top-bikes .bike-info .info-content {
+        opacity: 0;
         position: absolute;
-        right: 68px;
-        bottom: 73px;
-        font-size: 78px;
-        font-weight: 700;
-        line-height: 70.5px;
-        width: 100px; }
-        .bikes .bike-info .info-content .info-substring span {
-          font-size: 43px;
+        background-color: rgba(0, 4, 255, 0.75);
+        width: 100%;
+        height: 100%; }
+        .bikes .top-bikes .bike-info .info-content:hover {
+          opacity: 1; }
+        .bikes .top-bikes .bike-info .info-content .info-title {
+          width: 50%;
+          height: 50%;
+          color: #ffffff;
+          font-size: 68px;
           font-weight: 500;
-          line-height: 1; }
-    .bikes .bike-info img {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center; }
+          line-height: 61.5px;
+          letter-spacing: 2.73px;
+          position: relative;
+          left: 5%;
+          top: 20%; }
+        .bikes .top-bikes .bike-info .info-content .info-substring {
+          position: absolute;
+          right: 68px;
+          bottom: 73px;
+          font-size: 78px;
+          font-weight: 700;
+          line-height: 1;
+          width: 100px; }
+          .bikes .top-bikes .bike-info .info-content .info-substring span {
+            font-size: 43px;
+            font-weight: 500;
+            line-height: 1; }
+      .bikes .top-bikes .bike-info img {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center; }
+    .bikes .top-bikes .bike-info__min {
+      width: 417px;
+      margin-left: 44px; }
+  .bikes .bottom-bikes {
+    margin-top: 45px; }
+    .bikes .bottom-bikes .bike-info__min {
+      margin-left: 0; }
+    .bikes .bottom-bikes .bike-info__last {
+      margin-left: 44px; }
 
 /*# sourceMappingURL=style.css.map */
