--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,7 @@ header {
             font-family: Teko;
             color: #ffffff;
             .info-content {
+                transition: opacity .5s;
                 opacity: 0;
                 position: absolute;
                 background-color: rgba(0, 4, 255, 0.75);
@@ -167,6 +168,7 @@ header {
                 height: 100%;
                 &:hover {
                     opacity: 1;
+                    cursor: pointer;
                 }
                 .info-title {
                     width: 50%;
