--- a/style.scss
+++ b/style.scss
@@ -223,3 +223,67 @@ header {
         }
     }
 }
+
+// Title - Teko
+// Menu & Price - Monstercat
+.product {
+    margin: auto;
+    margin-top: 122px;
+    height: 742px;
+    width: 1060px;
+    text-align: center;
+    h2 {
+        color: #f1f1f1;
+        font-family: Teko;
+        font-size: 53px;
+        font-weight: 700;
+        line-height: 1;
+    }
+    .menu {
+        margin-top: 60px;
+        font-family: Montserrat;
+        font-size: 21px;
+        font-weight: 400;
+        line-height: 1;
+        a{
+            text-decoration: none;
+            color: #f1f1f1;
+            margin-right: 46px;
+        }
+    }
+    hr {
+        margin-top: 50px;
+        border: 2px solid #b2b2b2;
+    }
+    .pdoduct__helmets {
+        margin-top: 74px;
+        display: flex;
+        justify-content: center;
+        .helm {
+            background-color: #ffffff;
+            height: 510px;
+            width: 340px;
+            &:not(:first-child) {
+                margin-left: 22px;
+            }
+            img {
+                margin: 48px 44px 0px;
+            }
+            .helm__price {
+                color: #262626;
+                font-family: Monstercat;
+                font-size: 21px;
+                font-weight: 600;
+                line-height: 1;
+                margin: 74px 39px 0px;
+                p {
+                    color: #004cff;
+                    font-size: 30px;
+                    font-weight: 700;
+                    line-height: 1;
+                    margin-top: 27px;
+                }
+            }
+        }
+    }
+}
