fix spans in main

--- a/style.scss
+++ b/style.scss
@@ -176,7 +176,7 @@ header {
                     color: #ffffff;
                     font-size: 68px;
                     font-weight: 500;
-                    line-height: 61.5px;
+                    line-height: 1;
                     letter-spacing: 2.73px;
                     position: relative;
                     left: 5%;
