--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ header {
           color: #ffffff;
           font-size: 68px;
           font-weight: 500;
-          line-height: 61.5px;
+          line-height: 1;
           letter-spacing: 2.73px;
           position: relative;
           left: 5%;
@@ -210,6 +210,7 @@ header {
       color: #f1f1f1;
       margin-right: 46px; }
   .product hr {
+    height: 1px;
     margin-top: 50px;
     border: 2px solid #b2b2b2; }
   .product .pdoduct__helmets {
@@ -237,5 +238,15 @@ header {
           font-weight: 700;
           line-height: 1;
           margin-top: 27px; }
+
+.footer-bikes {
+  margin-top: 130px;
+  height: 1080px; }
+  .footer-bikes .top-bikes .bike-info {
+    width: 777px;
+    height: 486px; }
+  .footer-bikes .top-bikes .bike-info__min {
+    width: 530px;
+    left: -44px; }
 
 /*# sourceMappingURL=style.css.map */
