--- a/style.css
+++ b/style.css
@@ -248,5 +248,49 @@ header {
   .footer-bikes .top-bikes .bike-info__min {
     width: 530px;
     left: -44px; }
+  .footer-bikes .street-biker {
+    margin: auto;
+    width: 1350px;
+    height: 550px;
+    margin-top: 45px;
+    position: relative; }
+    .footer-bikes .street-biker img {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center; }
+    .footer-bikes .street-biker .info-content {
+      opacity: .75;
+      background-color: #004cff;
+      position: absolute;
+      width: 100%;
+      height: 100%; }
+    .footer-bikes .street-biker form {
+      position: absolute;
+      top: 50%;
+      left: 20%;
+      font-family: Montserrat;
+      font-size: 19px; }
+      .footer-bikes .street-biker form .input-text {
+        /* Style for "Rectangle" */
+        padding-left: 44px;
+        width: 720px;
+        height: 62px;
+        background-color: #ffffff;
+        color: #707070;
+        font-weight: 400; }
+      .footer-bikes .street-biker form .input-submit {
+        /* Style for "SUBMIT" */
+        width: 76px;
+        height: 13px;
+        color: #ffffff;
+        font-weight: 600;
+        width: 180px;
+        height: 62px;
+        background-color: #004cff;
+        border: none; }
 
 /*# sourceMappingURL=style.css.map */
