--- a/style.scss
+++ b/style.scss
@@ -300,4 +300,52 @@ header {
             width: 530px;
             left: -44px;
         }
+        .street-biker {
+            margin: auto;;
+            width: 1350px;
+            height: 550px;
+            margin-top: 45px;
+            position: relative;
+            img {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+            .info-content {
+                opacity: .75;
+                background-color: #004cff;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+            }
+            form {
+                position: absolute;
+                top: 50%;
+                left: 20%;
+                font-family: Montserrat;
+                font-size: 19px;
+                .input-text {/* Style for "Rectangle" */
+                    padding-left: 44px;
+                    width: 720px;
+                    height: 62px;
+                    background-color: #ffffff;
+                    color: #707070;
+                    font-weight: 400;
+                }
+                .input-submit {/* Style for "SUBMIT" */
+                    width: 76px;
+                    height: 13px;
+                    color: #ffffff;
+                    font-weight: 600;
+                    width: 180px;
+                    height: 62px;
+                    background-color: #004cff;
+                    border: none;
+                }
+            }
+        }
     }
