--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,9 @@ body{
     overflow-x: hidden;
 }
 header {
+    width: 100%;
+    position: relative;
+    margin: auto;
     height: 78px;
     background-color: #262626;
     background-size: cover;
@@ -41,7 +44,8 @@ header {
 }
 
 .main {
-    width: 100%;
+    width: 1440px;
+    margin: auto;
     height: 800px;
     background-image: url(img/harley-davidson-1Lg7p5hC2pI-unsplash.jpg);
     background-size: cover;
@@ -300,12 +304,18 @@ header {
             width: 530px;
             left: -44px;
         }
+        .bike-wrapper {
+            display: flex;
+            justify-content: center;
+        }
         .street-biker {
-            margin: auto;;
             width: 1350px;
             height: 550px;
+            margin: auto;
             margin-top: 45px;
             position: relative;
+            display: flex;
+            justify-content: center;
             img {
                 position: absolute;
                 left: 0;
@@ -321,13 +331,16 @@ header {
                 position: absolute;
                 width: 100%;
                 height: 100%;
+                color: #ffffff;
             }
             form {
-                position: absolute;
-                top: 50%;
-                left: 20%;
+                position: relative;
+                top: 340px;
+                height: 63px;
                 font-family: Montserrat;
                 font-size: 19px;
+                display: flex;
+                justify-content: center;
                 .input-text {/* Style for "Rectangle" */
                     padding-left: 44px;
                     width: 720px;
@@ -335,17 +348,107 @@ header {
                     background-color: #ffffff;
                     color: #707070;
                     font-weight: 400;
+                    border: none;
+                    &:focus {
+                        outline: none;
+                        box-shadow: none;
+                    }
                 }
                 .input-submit {/* Style for "SUBMIT" */
-                    width: 76px;
-                    height: 13px;
                     color: #ffffff;
                     font-weight: 600;
-                    width: 180px;
-                    height: 62px;
                     background-color: #004cff;
                     border: none;
+                    outline: none;
+                    height: 100%;
+                    width: 180px;
+                }
+            }
+            h1 {
+                color: #ffffff;
+                font-family: Teko;
+                font-size: 97px;
+                font-weight: 700;
+                line-height: 146.25px;
+                position: absolute;
+                margin-top: 160px;
+            }
+        }
+}
+
+.conditions {
+        width: 1058px;
+        height: 165px;
+        margin: auto;
+        margin-top: 105px;
+        display: flex;
+        justify-content: space-between;
+        .condition {
+            border: 3px solid #707070;
+            background-color: #ffffff;
+            width: 338px;
+            height: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            img {
+                padding-left: 31px;
+            }
+            .codition__text {
+                color: #262626;
+                font-family: Montserrat;
+                font-size: 13px;
+                font-weight: 700;
+                line-height: 1;
+                padding: 0 35px;
+                div {
+                    color: #707070;
+                    font-size: 11px;
+                    font-weight: 400;
+                    line-height: 1;
+                    margin-top: 15px;
                 }
             }
         }
+}
+
+.moto-jpegs {
+    display: flex;
+    justify-content: center;
+    margin-top: 104px;
+    img {
+        width: 480px;
+        object-fit: cover;
+        object-position: center;
     }
+}
+
+.navigation {
+    display: flex;
+    justify-content: center;
+    font-family: Montserrat;
+    color: #ffffff;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 1;
+    margin-top: 114px;
+    h3 {
+        font-size: 25px;
+        font-weight: 400;
+        line-height: 30px;
+        margin-bottom: 39px;
+        &.follow {
+            margin-top: 68px;
+        }
+    }
+    a {
+        color: #ffffff;
+        text-decoration: none;
+    }
+    ul {
+        list-style: none;
+    }
+    .about {
+        width: 250px;
+    }
+}
