--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,13 @@
 @import "https://fonts.googleapis.com/css?family=Teko&display=swap";
 // Montserrat
 // Teko
+button {
+    border: none;
+}
+button:hover, .input-submit:hover, a:hover {
+    cursor: pointer;
+    filter: brightness(56%);
+}
 * {
     box-sizing: border-box;
     padding: 0;
@@ -44,9 +51,10 @@ header {
 }
 
 .main {
-    width: 1440px;
+    transition: background-image 1s ease-in;
+    max-width: 2000px;
     margin: auto;
-    height: 800px;
+    min-height: 1000px;
     background-image: url(img/harley-davidson-1Lg7p5hC2pI-unsplash.jpg);
     background-size: cover;
     .main__header {
@@ -149,6 +157,9 @@ header {
             border: 6px solid #ffffff;
         }
     }
+}
+.main-reshow {
+    background-image: url(img/gay_on_bike.jpg);
 }
 
 .bikes {
@@ -488,7 +499,9 @@ header {
 }
 
 .cut {
-    margin: 67px 67px 0px 67px;
+    width: 1306px;
+    margin: auto;
+    margin-top: 67px;
     height: 1px;
     border: 2px solid #b2b2b2;
 }
