--- a/style.css
+++ b/style.css
@@ -12,10 +12,37 @@ button:hover, .input-submit:hover, a:hover {
   padding: 0;
   margin: 0; }
 
-body {
+.hide {
+  background: #262626;
+  overflow: hidden; }
+
+.after-load {
   background: #262626;
   overflow-x: hidden; }
 
+.preloader {
+  position: absolute;
+  background-color: #262626;
+  width: 100%;
+  height: 100%;
+  z-index: 100; }
+  .preloader .preloader__content {
+    width: 100px;
+    height: 100px;
+    border: 10px solid blue;
+    border-top-color: #fff;
+    border-radius: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: 1s spin infinite linear; }
+
+@keyframes spin {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg); }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg); } }
 header {
   width: 1440px;
   position: relative;
@@ -46,7 +73,7 @@ header {
   transition: background-image 1s ease-in;
   max-width: 2000px;
   margin: auto;
-  min-height: 1000px;
+  height: 1000px;
   background-image: url(img/harley-davidson-1Lg7p5hC2pI-unsplash.jpg);
   background-size: cover; }
   .main .main__header {
