--- a/style.scss
+++ b/style.scss
@@ -56,7 +56,7 @@ button:hover, .input-submit:hover, a:hover {
 }
 
 header {
-    width: 1440px;
+    max-width: 1440px;
     position: relative;
     margin: auto;
     height: 78px;
@@ -68,24 +68,22 @@ header {
         top: 33px;
         font-size: 12px;
         font-weight: 500;
-        left: 192px;
         font-family: Montserrat;
-        display: inline;
+        display: inline-flex;
     }
     .list {
         height: 78px;
-        display: flex;
+        display: inline-flex;
         align-items: center;
         flex-direction: row-reverse;
         position: relative;
-        right: 195px;
+        left: 80%;
         a:not(:first-child) {
             margin-right: 28px;
         }
     }
     
 }
-
 .main {
     transition: background-image 1s ease-in;
     max-width: 2000px;
@@ -93,6 +91,7 @@ header {
     height: 1000px;
     background-image: url(img/harley-davidson-1Lg7p5hC2pI-unsplash.jpg);
     background-size: cover;
+    background-position: center;
     .main__header {
         overflow: hidden;
         position: relative;
@@ -104,7 +103,7 @@ header {
         .main__logo {
             position: relative;
             top: 5px;
-            left: 191px;
+            left: 10%;
         }
         .main__nav {
             position: relative;
@@ -142,7 +141,7 @@ header {
             background-color: #004cff;
             color: #ffffff;
             position: relative;
-            right: 191px;
+            right: 10%;
         }
     }
     .main__center {
@@ -155,19 +154,19 @@ header {
             font-family: Teko;
             font-size: 68px;
             font-weight: 700;
-            line-height: 72px;
+            line-height: 1.6;
             color: #ffffff;
             width: 328px;
             position: relative;
-            left: 192px;
+            left: 10%;
             letter-spacing: 2.73px;
             overflow: hidden;
         }
         .main__slider {
             position: relative;
-            position: relative;
-            right: 113px;
+            right: 10%;
             p {
+                transition: border-color 1s ease-in;
                 width: 16px;
                 height: 16px;
                 border: 4px solid #404040;
@@ -181,7 +180,7 @@ header {
     }
     .main__discover {
         position: relative;
-        left: 191px;
+        left: 10%;
         top: 392px;
         button {
             width: 248px;
@@ -194,6 +193,7 @@ header {
         }
     }
 }
+
 .main-reshow {
     background-image: url(img/gay_on_bike.jpg);
 }
@@ -318,6 +318,7 @@ header {
             }
             img {
                 margin: 48px 44px 0px;
+                object-position: center;
             }
             .helm__price {
                 color: #262626;
